--- a/Index.html
+++ b/Index.html
@@ -27,7 +27,7 @@
 
     <div class="menu_bar">
       <header>
-        <a href="Index.html" class="logo">Gaming store</a>
+        <a href="Index.html" class="logo">GamingStore</a>
         <ul class="navigacijska-traka">
           <li><a href="Index.html">Home</a></li>
           <li><a href="GamingPC.html">Gaming PC</a></li>
@@ -121,19 +121,7 @@
 
 
 
-    <div class="kontent">
-      <p>Lorem ipsum dolor sit, amet
-        consecteturadipisicing elit. Quae, quidem,
-        cum temporibus odit nulla sequi culpa veritatis libero quod soluta
-        repudia dasdasdandae ducimus, vel labore doloribus quasi autem porro
-        reiciendismagnam!</p>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis voluptas
-        nihil id te sdaasdnetur amet veniam qui similique! Animi tempore,
-        laboriosamtenetur temporibus suscipit nostrum ducimus accusantium
-        assumenda aut
-        laborum delectus!</p>
 
-    </div>
 
 
 
@@ -141,10 +129,14 @@
     <footer>
       <div class="footer-content">
         <div class="social">
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-youtube"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.instagram.com/" target="_blank"><i class="fab
+              fa-instagram"></i></a>
+          <a href="https://www.youtube.com/" target="_blank"><i class="fab
+              fa-youtube"></i></a>
+          <a href="https://twitter.com/" target="_blank"><i class="fab
+              fa-twitter"></i></a>
+          <a href="https://www.facebook.com/" target="_blank"><i class="fab
+              fa-facebook-f"></i></a>
         </div>
         <ul class="list">
           <li>
