--- a/acer-laptop.html
+++ b/acer-laptop.html
@@ -58,7 +58,7 @@
         <p>1800 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('2022 Acer Nitro 5')">Buy it now</a>
         </div>
 
       </div>
@@ -73,7 +73,8 @@
         <p>2400 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Acer Nitro 5 AN517-54-79L1 Laptop')">Buy
+            it now</a>
         </div>
 
       </div>
@@ -90,7 +91,9 @@
         <p>2560 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Acer Nitro 5 AN517-55-72R4 Laptop')">Buy
+            it now</a>
+
         </div>
 
       </div>
@@ -105,7 +108,8 @@
         <p>3400 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Acer Nitro 5 AN515-46-R0EQ Gaming')">Buy
+            it now</a>
         </div>
 
       </div>
@@ -122,7 +126,8 @@
         <p>1820 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Acer Nitro 5 AN517-41-R7EY Gaming')">Buy
+            it now</a>
         </div>
 
       </div>
@@ -138,7 +143,10 @@
         <p>2400 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#"
+            onclick="buyProduct('Acer Predator Helios 300 PH315-54PH315')">
+            Buy it now</a>
+
         </div>
 
       </div>
