--- a/acer-monitor.html
+++ b/acer-monitor.html
@@ -59,7 +59,7 @@
         <p>320KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Nitro by Acer<')">Buy it now</a>
         </div>
 
       </div>
@@ -76,7 +76,7 @@
         <p>400KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Acer KG251Q Jbmidpx')">Buy it now</a>
         </div>
 
       </div>
@@ -94,7 +94,8 @@
         <p>500KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Acer Nitro XV272U Vbmiipr')">Buy it
+            now</a>
         </div>
 
 
@@ -112,7 +113,8 @@
         <p>800KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Acer Nitro XZ320Q Xbmiiphx')">Buy it
+            now</a>
         </div>
 
       </div>
@@ -127,7 +129,8 @@
         <p>1998KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Acer Predator XB323U GXbmiiphzx')">Buy
+            it now</a>
         </div>
 
       </div>
@@ -143,7 +146,8 @@
         <p>1400KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Acer Nitro XR343CK Pbmiipphuzx')">Buy
+            it now</a>
         </div>
 
       </div>
