--- a/apple-laptop.html
+++ b/apple-laptop.html
@@ -59,7 +59,8 @@
         <p>2000 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Apple 2020 MacBook Air Laptop')">Buy
+            it now</a>
         </div>
 
       </div>
@@ -68,13 +69,14 @@
         <img src="images/apple laptop/apple2.jpg" alt="">
         <h2>Apple 2022 MacBook Air Laptop </h2>
         <p>with M2 chip: 13.6-inch Liquid Retina <br>
-          Display, 8GB RAM, 256GB SSD Storage, > Backlit Keyboard, <br>1080p
+          Display, 8GB RAM, 256GB SSD Storage, Backlit Keyboard, <br>1080p
           FaceTime
           HD Camera. Works with iPhone and iPad; <br> Silver</p>
         <p>2400 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Apple 2022 MacBook Air LaptopR')">Buy
+            it now</a>
         </div>
 
       </div>
@@ -87,7 +89,7 @@
         <p>2800 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Apple MacBook Pro ')">Buy it now</a>
         </div>
 
       </div>
@@ -100,7 +102,7 @@
         <p>2900 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('2019 Apple MacBook Pro')">Buy it now</a>
         </div>
 
       </div>
@@ -113,7 +115,7 @@
         <p>3800 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Apple 2021 MacBook Pro')">Buy it now</a>
         </div>
 
       </div>
@@ -126,7 +128,7 @@
         <p>3200 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Apple 2021 MacBook Pro')">Buy it now</a>
         </div>
 
       </div>
