--- a/asus-monitor.html
+++ b/asus-monitor.html
@@ -59,7 +59,8 @@
         <p>660 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('ASUS TUF Gaming VG32VQ1B')">Buy it
+            now</a>
         </div>
 
       </div>
@@ -74,7 +75,8 @@
         <p>600 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('ASUS TUF Gaming VG27AQ')">Buy it
+            now</a>
         </div>
 
       </div>
@@ -82,7 +84,7 @@
       <div class="product-box-monitor">
         <img src="images/asus monitor/asusmonitor3.jpg" alt="">
         <h2>ASUS ROG Strix</h2>
-        <p> 27” 1080P Gaming Monitor (XG276Q) - <br>
+        <p> 27” 1080P Gaming Monitor (XG276Q) <br>
           Full HD, IPS,170Hz, 1ms, Extreme Low Motion Blur, <br>
           FreeSync Premium technology,DisplayPort, HDMI, <br>
           Tripod socket for
@@ -90,7 +92,7 @@
         <p>480 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('ASUS ROG Strix XG276Q')">Buy it now</a>
         </div>
 
       </div>
@@ -105,7 +107,8 @@
         <p>300 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('ASUS TUF Gaming VG248Q1B')">Buy
+            it now</a>
         </div>
 
       </div>
@@ -120,7 +123,7 @@
         <p>1560 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('ASUS ROG Strix XG349C')">Buy it now</a>
         </div>
 
       </div>
@@ -134,7 +137,7 @@
         <p>94</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Asus VP228HE')">Buy it now</a>
         </div>
 
       </div>
