--- a/cooler.html
+++ b/cooler.html
@@ -61,7 +61,8 @@
         <p>480 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('CORSAIR iCUE H150i ELITE')">Buy it
+            now</a>
         </div>
 
       </div>
@@ -77,7 +78,7 @@
         <p>270 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('NZXT Kraken X53 240mm ')">Buy it now</a>
         </div>
 
       </div>
@@ -92,7 +93,10 @@
         <p>180 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#"
+            onclick="buyProduct('CoolerMaster MasterLiquid ML240L RGB')">Buy it
+            now</a>
+
         </div>
 
       </div>
@@ -108,7 +112,8 @@
         <p>440 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('ASUS ROG Ryujin II 240 ARGB')">Buy it
+            now</a>
         </div>
 
       </div>
@@ -123,7 +128,7 @@
         <p>52 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Jonsbo CR1400 RGB')">Buy it now</a>
         </div>
 
       </div>
@@ -139,7 +144,7 @@
         <p>130 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Cooler Master MasterFan')">Buy it now</a>
         </div>
 
       </div>
