--- a/dell-monitor.html
+++ b/dell-monitor.html
@@ -50,52 +50,53 @@
 
       <div class="product-box-monitor">
         <img src="images/dell monitor/delmonitor1.jpg" alt="">
-        <h2>Skytech Shadow Gaming Pc</h2>
-        <p>Dell P2422H 24" 16:9 IPS Computer Monitor Screen with Display Port
+        <h2>Dell P2422H 24"</h2>
+        <p> 16:9 IPS Computer Monitor Screen with Display Port
           <br>
           Cable and USB 3.0 Upstream Cable - <br> New Model
         </p>
         <p>249</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Dell P2422H 24')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box-monitor">
         <img src="images/dell monitor/delmonitor2.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Dell 27-inch USB-C Monitor - Full HD (1920 x 1080 Display, 75Hz <br>
+        <h2>Dell 27-inch USB-C Monitor</h2>
+        <p>Full HD (1920 x 1080 Display, 75Hz <br>
           Refresh Rate, 4MS Grey-to-Grey Response Time (Extreme Mode), Dual 3W
           <br>
           Built-in Speakers, HDMI, IPS, AMD FreeSync, Silver - S2723HC</p>
         <p>200</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Dell 27-inch USB-C Monitor')">Buy it
+            now</a>
         </div>
 
       </div>
 
       <div class="product-box-monitor">
         <img src="images/dell monitor/delmonitor3.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Dell S2721HS Full HD 1920 x 1080p, 75Hz IPS LED LCD Thin Bezel <br>
+        <h2>Dell S2721HS</h2>
+        <p> Full HD 1920 x 1080p, 75Hz IPS LED LCD Thin Bezel <br>
           Adjustable Gaming Monitor, 4ms Grey-to-Grey Response Time, 16.7 <br>
           Million Colors, HDMI ports, AMD FreeSync, Platinum Silver</p>
         <p>210</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Dell S2721HS')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box-monitor">
         <img src="images/dell monitor/delmonitor4.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Dell 24-Inch 165Hz Gaming Monitor - Full HD 1920 x 1080 Display, 1ms
+        <h2>Dell 24-Inch</h2>
+        <p> 165Hz Gaming Monitor - Full HD 1920 x 1080 Display, 1ms
           <br>
           Response Time, IPS, AMD FreeSync Technology, 99% sRGB Color Gamut,
           <br>
@@ -103,35 +104,36 @@
         <p>172</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Dell 24-Inch')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box-monitor">
         <img src="images/dell monitor/delmonitor5.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Dell Curved Gaming Monitor 27 Inch Curved with 165Hz Refresh Rate,
+        <h2>Dell Curved Gaming Monitor</h2>
+        <p> 27 Inch Curved with 165Hz Refresh Rate,
           <br>
           QHD (2560 x 1440) Display, Black - S2722DGM</p>
         <p>189</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Dell Curved Gaming Monitor')">Buy it
+            now</a>
         </div>
 
       </div>
 
       <div class="product-box-monitor">
         <img src="images/dell monitor/delmonitor6.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Dell S3221QS 32 Inch Curved 4K UHD, VA Ultra-Thin Bezel Monitor, AMD
+        <h2>Dell S3221QS</h2>
+        <p> 32 Inch Curved 4K UHD, VA Ultra-Thin Bezel Monitor, AMD
           <br>
           FreeSync, HDMI, DisplayPort, Built in Speakers, VESA Certified, Silver</p>
         <p>240</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Dell S3221QSR')">Buy it now</a>
         </div>
 
       </div>
