--- a/externa memorija.html
+++ b/externa memorija.html
@@ -16,7 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles/style-product.css">
+    <link rel="stylesheet" href="styles/style-product-externa.css">
     <script src="scripts/buy.js"></script>
   </head>
   <body>
@@ -46,191 +46,194 @@
 
 
 
-    <div class="product-container">
+    <div class="product-container-externa">
 
-      <div class="product-box">
+      <div class="product-box-externa">
         <img src="images/eksterna memorija/e1.jpg" alt="">
-        <h2>Skytech Shadow Gaming Pc</h2>
-        <p>Toshiba Canvio Basics 2TB Portable External Hard Drive USB 3.0, Black
+        <h2>Toshiba Canvio</h2>
+        <p> Basics 2TB Portable External Hard Drive USB 3.0, Black <br>
           - HDTB420XK3AA
         </p>
-        <p>59$</p>
+        <p>120 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Toshiba Canvio')">Buy it now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-externa">
         <img src="images/eksterna memorija/e2.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>WD 5TB Elements Portable HDD, External Hard Drive, USB 3.0 for PC &
+        <h2>WD 5TB</h2>
+        <p> Elements Portable HDD, External Hard Drive, USB 3.0 for PC & <br>
           Mac, Plug and Play Ready - WDBU6Y0050BBK-WESN</p>
-        <p>100$</p>
+        <p>200 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('WD 5TB')">Buy it now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-externa">
         <img src="images/eksterna memorija/e3.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>WD_BLACK 5TB P10 Game Drive - Portable External Hard Drive HDD,
+        <h2>WD_BLACK</h2>
+        <p> 5TB P10 Game Drive - Portable External Hard Drive HDD, <br>
           Compatible with Playstation, Xbox, PC, & Mac - WDBA3A0050BBK-WESN</p>
-        <p>120$</p>
+        <p>240 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('WD_BLACK')">Buy it now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-externa">
         <img src="images/eksterna memorija/e4.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>USB Flash Drive, High-Speed Thumb Drive Waterproof Memory Stick Metal
-          USB Drive Data Storage with Keychain Design Pen Drive Jump Drive for
+        <h2>USB Flash Drive</h2>
+        <p> High-Speed Thumb Drive Waterproof Memory Stick Metal
+          USB Drive Data Storage with<br> Keychain Design Pen Drive Jump Drive
+          for
           Data Backup and Transfer for PC/Laptop</p>
-        <p>30$</p>
+        <p>60 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('USB Flash Drive')">Buy it now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-externa">
         <img src="images/eksterna memorija/e5.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>SanDisk 128GB Ultra Flair USB 3.0 Flash Drive - SDCZ73-128G-G46</p>
-        <p>15$</p>
+        <h2>SanDisk 128GB</h2>
+        <p> Ultra Flair USB 3.0 Flash Drive - <br> SDCZ73-128G-G46</p>
+        <p>30 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('SanDisk 128GB')">Buy it now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-externa">
         <img src="images/eksterna memorija/e6.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>KEXIN Flash Drive 32 GB 5 Pack Thumb Drive 32GB USB Flash Drive
+        <h2>KEXIN Flash Drive</h2>
+        <p> 32 GB 5 Pack Thumb Drive 32GB USB Flash Drive <br>
           Memory Stick Flash Drives USB 2.0, 5 Multi-Color (Black, Blue, Green,
           White, Red)</p>
-        <p>16$</p>
+        <p>32 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('KEXIN Flash Drive')">Buy it now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-externa">
         <img src="images/eksterna memorija/e7.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Amazon Basics microSDXC Memory Card with Full Size Adapter, A2, U3,
+        <h2>Amazon Basics</h2>
+        <p> microSDXC Memory Card with Full Size Adapter, A2, U3, <br>
           Read Speed up to 100 MB/s, 128 GB</p>
-        <p>12$</p>
+        <p>24 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Amazon Basics')">Buy it now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-externa">
         <img src="images/eksterna memorija/e8.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>512GB Micro SD Card Class 10 High Speed Memory Card for Android
-          Smartphone, Cameras,Tablet and Drone（512GB</p>
-        <p>20$</p>
+        <h2>512GB Micro SD1</h2>
+        <p> Card Class 10 High Speed Memory Card for Android <br>
+          Smartphone, Cameras,Tablet and Drone(512GB</p>
+        <p>40 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('512GB Micro SD1')">Buy it now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-externa">
         <img src="images/eksterna memorija/e9.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>SAMSUNG EVO Select Micro SD-Memory-Card + Adapter, 256GB microSDXC
-          130MB/s Full HD & 4K UHD, UHS-I, U3, A2, V30, Expanded Storage for
-          Android Smartphones, Tablets, Nintendo-Switch (MB-ME256KA/AM)</p>
-        <p>25$</p>
+        <h2>SAMSUNG EVO</h2>
+        <p> Select Micro SD-Memory-Card + Adapter, 256GB microSDXC
+          130MB/s Full HD & 4K <br>UHD, UHS-I, U3, A2, V30, Expanded Storage for
+          Android Smartphones, <br> Tablets, Nintendo-Switch (MB-ME256KA/AM)</p>
+        <p>50 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('SAMSUNG EVO')">Buy it now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-externa">
         <img src="images/eksterna memorija/e10.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Optical Quantum Blue AZO CD-R 700MB 52X Recordable Media Disc 100pk
+        <h2>Optical Quantum </h2>
+        <p>Blue AZO CD-R 700MB 52X <br> Recordable Media Disc 100pk <br>
           Spindle OQCD52BLT-BX</p>
-        <p>20$</p>
+        <p>40 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Optical Quantum ')">Buy it now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-externa">
         <img src="images/eksterna memorija/e11.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Verbatim DVD+R 4.7GB 16x AZO Recordable Media Disc - 100 Disc Spindle
+        <h2>Verbatim DVD+R</h2>
+        <p> 4.7GB 16x AZO Recordable Media Disc - 100 Disc Spindle <br>
           (FFP) - 97459, Branded, 100pk Spindle FFP</p>
-        <p>25$</p>
+        <p>50 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Verbatim DVD+R')">Buy it now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-externa">
         <img src="images/eksterna memorija/e12.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>ORICO 3.5 Inch Hard Drive Case Protective Box with Anti-Static
-          ,Shockproof and Dustproof Function, Storage Case for HDD External Hard
+        <h2>ORICO 3.5</h2>
+        <p> Inch Hard Drive Case Protective Box with Anti-Static
+          ,Shockproof and Dustproof Function, <br> Storage Case for HDD External
+          Hard
           Drive Case,Gray,5 Pack-PHP35</p>
-        <p>23$</p>
+        <p>46 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('ORICO 3.5')">Buy it now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-externa">
         <img src="images/eksterna memorija/e13.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Reletech 2.5" External Hard Drive Enclosure, SATA to USB 3.1
-          Tool-Free Clear for 2.5 Inch SSD & HDD 9.5mm 7mm External Hard Drive
+        <h2>Reletech 2.5</h2>
+        <p>" External Hard Drive Enclosure, SATA to USB 3.1
+          Tool-Free Clear for 2.5 Inch SSD & <br>HDD 9.5mm 7mm External Hard
+          Drive
           Case Supports UASP SATA</p>
-        <p>10$</p>
+        <p>20 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Reletech 2.5')">Buy it now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-externa">
         <img src="images/eksterna memorija/e14.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>SABRENT USB 3.0 to SATA External Hard Drive Lay Flat Docking Station
+        <h2>SABRENT USB 3.0</h2>
+        <p> 3.0 to SATA External Hard Drive Lay Flat Docking Station <br>
           for 2.5 or 3.5in HDD, SSD [Support UASP and 20TB] (EC-DFLT)</p>
-        <p>26$</p>
+        <p>48 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('SABRENT USB 3.0')">Buy it now</a>
         </div>
 
       </div>
