--- a/hdd.html
+++ b/hdd.html
@@ -50,21 +50,21 @@
 
       <div class="product-box">
         <img src="images/hdd/hdd1.webp" alt="">
-        <h2>Western Digital </h2>
+        <h2>Western Digital 2TB </h2>
         <p>2TB WD Blue PC <br> Internal Hard Drive - 7200 RPM
           Class, <br> SATA 6 Gb/s,<br> 256 MB Cache, 3.5" - WD20EZBX
         </p>
         <p>88 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Western Digital 2TB')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box">
         <img src="images/hdd/hdd2.webp" alt="">
-        <h2>Western Digital </h2>
+        <h2>Western Digital 8TB</h2>
         <p>8TB WD Blue PC Internal Hard Drive <br>HDD - 5640
           RPM,
 
@@ -72,14 +72,14 @@
         <p>220 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Western Digital 8TB')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box">
         <img src="images/hdd/hdd3.jpg" alt="">
-        <h2>Seagate IronWolf</h2>
+        <h2>Seagate IronWolf 4TB </h2>
         <p> 4TB NAS Internal Hard Drive HDD – CMR 3.5 Inch<br/> SATA
             6Gbs5900 RPM 64MB Cache for RAID <br>Network Attached
             Storage,Rescue Services– <br> Frustration Free Packaging
@@ -87,7 +87,7 @@
           <p>150 KM</p>
 
           <div class="opcije">
-            <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it
+            <a href="#" onclick="buyProduct('Seagate IronWolf 4TB ')">Buy it
               now</a>
           </div>
 
@@ -98,7 +98,7 @@
 
         <div class="product-box">
           <img src="images/hdd/hdd4.jpg" alt="">
-          <h2>Seagate Exos X18</h2>
+          <h2>Seagate Exos X18 18TB</h2>
           <p> 18TB Enterprise HDD - CMR 3.5 Inch Hyperscale SATA <br>
             6Gb/s, 7200 RPM, 512e and 4Kn FastFormat, <br> Low Latency with
             Enhanced
@@ -107,7 +107,7 @@
           <p>600 KM</p>
 
           <div class="opcije">
-            <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it
+            <a href="#" onclick="buyProduct('Seagate Exos X18 18TB')">Buy it
               now</a>
           </div>
 
@@ -123,7 +123,7 @@
           <p>97 KM</p>
 
           <div class="opcije">
-            <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it
+            <a href="#" onclick="buyProduct('Western Digital RE 4TB')">Buy it
               now</a>
           </div>
 
@@ -137,7 +137,7 @@
           <p>150 KM</p>
 
           <div class="opcije">
-            <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it
+            <a href="#" onclick="buyProduct('Western Digital 4TB')">Buy it
               now</a>
           </div>
 
