--- a/intel-pc.html
+++ b/intel-pc.html
@@ -60,7 +60,7 @@
         <p>2200 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Skytech Blaze 3.0')">Buy it now</a>
         </div>
 
       </div>
@@ -75,7 +75,8 @@
         <p>3000 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Skytech Chronos Gaming PC')">Buy it
+            now</a>
         </div>
 
       </div>
@@ -91,7 +92,8 @@
         <p>2400 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Skytech Gaming Archangel ')">Buy it
+            now</a>
         </div>
 
       </div>
@@ -107,7 +109,8 @@
         <p>3600 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Skytech Chronos Gaming PC<')">Buy it
+            now</a>
         </div>
 
       </div>
@@ -123,7 +126,8 @@
         <p>1300 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('SkyTech Chronos Mini Gaming')">Buy it
+            now</a>
         </div>
 
       </div>
@@ -139,7 +143,7 @@
         <p>1500$</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Skytech Shiva Gaming PC')">Buy it now</a>
         </div>
 
       </div>
