--- a/mikrofon.html
+++ b/mikrofon.html
@@ -50,86 +50,94 @@
 
       <div class="product-box">
         <img src="images/mikrofon/mic1.jpg" alt="">
-        <h2>Skytech Shadow Gaming Pc</h2>
-        <p>MAONO Gaming Microphone for PC, USB Programmable Condenser Mic with
-          RGB Lights, Mute, Gain, Headphone Output, Volume Control for
-          Streaming, Podcast, Twitch, YouTube, Discord, Computer, Mac, PS5 -DM30
+        <h2>MAONO Gaming Microphone</h2>
+        <p> for PC, USB Programmable Condenser Mic with
+          RGB<br> Lights, Mute, Gain, Headphone Output, Volume Control<br> for
+          Streaming, Podcast, Twitch, YouTube, <br> Discord, Computer, Mac, PS5
+          -DM30
         </p>
-        <p>50</p>
+        <p>100 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('MAONO Gaming Microphone')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box">
         <img src="images/mikrofon/mic2.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>WMT USB Microphone, Condenser Gaming Microphone for
-          PC/MAC/PS4/PS5/Phone- Cardioid Mic with Brilliant RGB Lighting
-          Headphone Output Volume Control, Mute Button, for Streaming Podcast
+        <h2>WMT USB Microphone</h2>
+        <p> Condenser Gaming Microphone for
+          PC/MAC/PS4/PS5<br>/Phone- Cardioid Mic with Brilliant RGB Lighting
+          <br>
+          Headphone Output Volume Control, Mute Button,<br> for Streaming
+          Podcast
+
           YouTube Discord</p>
-        <p>37</p>
+        <p>64 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('WMT USB Microphone')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box">
         <img src="images/mikrofon/mic3.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Razer Seiren X USB Streaming Microphone: Professional Grade -
-          Built-in Shock Mount - Supercardiod Pick-Up Pattern - Anodized
-          Aluminum - Classic Black</p>
-        <p>80</p>
+        <h2>Razer Seiren X</h2>
+        <p> USB Streaming Microphone: Professional Grade - <br>
+          Built-in Shock Mount - Supercardiod Pick-Up Pattern<br - Anodized>
+          Aluminum - <br> Classic Black</p>
+        <p>160 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Razer Seiren X')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box">
         <img src="images/mikrofon/mic4.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>MAONO USB Microphone with One-Touch Mute and Gain Knob, Professional
-          Condenser Computer PC Mic for Podcasting, Recording, Gaming, Live
-          Streaming, Zoom Meeting, Studio, YouTube, Skype, AU-PM421</p>
-        <p>80</p>
+        <h2>MAONO USB Microphone </h2>
+        <p>Microphone with One-Touch Mute and Gain Knob,<br> Professional
+          Condenser Computer PC Mic for <br>Podcasting, Recording, Gaming, Live
+          Streaming, <br> Zoom Meeting, Studio,YouTube, Skype, AU-PM421</p>
+        <p>160 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('MAONO USB Microphone')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box">
         <img src="images/mikrofon/mic5.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Donner DC-87 XLR Condenser Microphone, 25.4mm Large Diaphragm Studio
-          Microphone, 3 Polar Patterns Recording Mic for Streaming, Podcasting,
-          Broadcast, Vocals, Instrument, Classic Design</p>
-        <p>130</p>
+        <h2>Donner DC-87 XLR</h2>
+        <p> Condenser Microphone, 25.4mm Large <br>Diaphragm Studio
+          Microphone, 3 Polar Patterns<br> Recording Mic for Streaming,
+          Podcasting,
+
+          Broadcast, <br> Vocals, Instrument, Classic Design</p>
+        <p>260 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Donner DC-87 XLR')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box">
         <img src="images/mikrofon/mic6.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Elgato Wave:3 - Premium Studio Quality USB Condenser Microphone for
-          Streaming, Podcast, Gaming and Home Office, Free Mixer Software, Sound
-          Effect Plugins, Anti-Distortion, Plug ’n Play, for Mac, PC</p>
-        <p>150</p>
+        <h2>Elgato Wave:3 </h2>
+        <p>Premium Studio Quality USB Condenser Microphone<br> for
+          Streaming, Podcast, Gaming and Home Office, Free<br> Mixer Software,
+          Sound
+
+          Effect Plugins, Anti-Distortion, <br> Plug ’n Play, for Mac, PC</p>
+        <p>300 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Elgato Wave:3 ')">Buy it now</a>
         </div>
 
       </div>
