--- a/miš.html
+++ b/miš.html
@@ -59,7 +59,7 @@
         <p>300 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Razer Basilisk V3 Pro')">Buy it now</a>
         </div>
 
       </div>
@@ -73,7 +73,8 @@
         <p>100 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Razer DeathAdder v2 Mini Gaming ')">Buy
+            it now</a>
         </div>
 
       </div>
@@ -88,7 +89,8 @@
         <p>64 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Redragon M908 Impact RGB LED')">Buy
+            it now</a>
         </div>
 
       </div>
@@ -101,7 +103,7 @@
         <p>88 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Glorious Gaming Mou')">Buy it now</a>
         </div>
 
       </div>
@@ -114,7 +116,8 @@
         <p>100 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Corsair Scimitar RGB Elite')">Buy it
+            now</a>
         </div>
 
       </div>
@@ -128,7 +131,7 @@
         <p>240 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Logitech G502')">Buy it now</a>
         </div>
 
       </div>
