--- a/mrezna oprema.html
+++ b/mrezna oprema.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mrezna oprema</title>
     <link rel="stylesheet" href="styles/style-menu.css">
     <link rel="stylesheet" href="styles/style-box.css">
     <link rel="stylesheet" href="styles/style-kontakt.css">
@@ -16,7 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles/style-product.css">
+    <link rel="stylesheet" href="styles/style-product-mreza.css">
     <script src="scripts/buy.js"></script>
   </head>
   <body>
@@ -46,261 +46,275 @@
 
 
 
-    <div class="product-container">
+    <div class="product-container-mreza">
 
-      <div class="product-box">
+      <div class="product-box-mreza">
         <img src="images/mrezna oprema/m1.jpg" alt="">
-        <h2>Skytech Shadow Gaming Pc</h2>
-        <p>TP-Link AX1800 WiFi 6 Router (Archer AX21) – Dual Band Wireless
-          Internet Router, Gigabit Router, USB port, Works with Alexa - A
+        <h2>TP-Link AX1800</h2>
+        <p> WiFi 6 Router (Archer AX21) Dual Band Wireless
+          Internet Router, Gigabit<br> Router, USB port, Works with Alexa - <br>
+          A
           Certified for Humans Device
         </p>
-        <p>100</p>
+        <p>200 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('TP-Link AX1800')">Buy it now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-mreza">
         <img src="images/mrezna oprema/m2.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>TP-Link AC1200 WiFi Router (Archer A54) - Dual Band Wireless Internet
-          Router, 4 x 10/100 Mbps Fast Ethernet Ports, Supports Guest WiFi,
-          Access Point Mode, IPv6 and Parental Controls</p>
-        <p>35</p>
+        <h2>TP-Link AC1200 </h2>
+        <p>WiFi Router (Archer A54) - Dual Band Wireless Internet
+          Router, 4 x 10/100 Mbps<br> Fast Ethernet Ports, Supports Guest WiFi,
+          Access Point Mode, <br> IPv6 and Parental Controls</p>
+        <p>70 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('TP-Link AC1200')">Buy it now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-mreza">
         <img src="images/mrezna oprema/m3.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>ASUS AC1750 WiFi Router (RT-AC65) - Dual Band Wireless Internet
-          Router, Easy Setup, Parental Control, USB 3.0, AiRadar Beamforming
-          Technology extends Speed, Stability & Coverage, MU-MIMO</p>
-        <p>80</p>
+        <h2>ASUS AC1750</h2>
+        <p> WiFi Router (RT-AC65) - Dual Band Wireless Internet
+          Router, Easy Setup,<br> Parental Control, USB 3.0, AiRadar
+          Beamforming
+          Technology extends Speed, <br> Stability & Coverage, MU-MIMO</p>
+        <p>160 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('ASUS AC1750')">Buy it now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-mreza">
         <img src="images/mrezna oprema/m4.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>TP-Link TL-SG108 | 8 Port Gigabit Unmanaged Ethernet Network Switch,
-          Ethernet Splitter | Plug & Play | Fanless Metal Design | Shielded
-          Ports | Traffic Optimization | Limited Lifetime Protection</p>
-        <p>40</p>
+        <h2>TP-Link TL-SG108</h2>
+        <p> 8 Port Gigabit Unmanaged Ethernet Network Switch,
+          Ethernet Splitter | <br> Plug & Play | Fanless Metal Design | Shielded
+          Ports | Traffic Optimization | <br> Limited Lifetime Protection</p>
+        <p>80 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('TP-Link TL-SG108')">Buy it now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-mreza">
         <img src="images/mrezna oprema/m5.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>TP-Link TL-SG105 | 5 Port Gigabit Unmanaged Ethernet Network Switch,
-          Ethernet Splitter | Plug & Play | Fanless Metal Design | Shielded
-          Ports | Traffic Optimization | Limited Lifetime Protection</p>
-        <p>20</p>
+        <h2>TP-Link TL-SG105 </h2>
+        <p> 5 Port Gigabit Unmanaged Ethernet Network Switch,
+          Ethernet Splitter | Plug & Play | <br> Fanless Metal Design | Shielded
+          Ports | Traffic Optimization | <br> Limited Lifetime Protection</p>
+        <p>40 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('TP-Link TL-SG105')">Buy it now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-mreza">
         <img src="images/mrezna oprema/m6.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>NETGEAR 5-Port Gigabit Ethernet Unmanaged Switch (GS305) - Home
-          Network Hub, Office Ethernet Splitter, Plug-and-Play, Silent
+        <h2>NETGEAR</h2>
+        <p> 5-Port Gigabit Ethernet Unmanaged Switch (GS305) - <br> Home
+          Network Hub, Office Ethernet Splitter, Plug-and-Play, <br> Silent
           Operation, Desktop or Wall Mount</p>
-        <p>22</p>
+        <p>44 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('NETGEAR')">Buy it now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-mreza">
         <img src="images/mrezna oprema/m7.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Dual-Port PCIe Gigabit Network Card 1000M PCI Express Ethernet
-          Adapter with Intel 82575/82576 Two Ports LAN NIC Card for Support PXE
+        <h2>Dual-Port</h2>
+        <p> PCIe Gigabit Network Card 1000M PCI Express Ethernet
+          Adapter with <br>Intel 82575/82576 Two Ports LAN NIC Card for Support
+          PXE <br>
           for Windows/Windows Server/Linux/Freebsd /DOS with Low Profile</p>
-        <p>40</p>
+        <p>80 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Dual-Port')">Buy it now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-mreza">
         <img src="images/mrezna oprema/m8.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>TP-Link AC1200 PCIe WiFi Card for PC (Archer T5E) - Bluetooth 4.2,
+        <h2>TP-Link AC1200</h2>
+        <p> PCIe WiFi Card for PC (Archer T5E) - Bluetooth 4.2,<br>
           Dual Band Wireless Network Card (2.4Ghz and 5Ghz) for Gaming,
-          Streaming, Supports Windows 10, 8.1, 8, 7 (32/64-bit)</p>
-        <p>40</p>
+          Streaming, <br> Supports Windows 10, 8.1, 8, 7 (32/64-bit)</p>
+        <p>80 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('TP-Link AC1200')">Buy it now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-mreza">
         <img src="images/mrezna oprema/m9.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>TP-Link WiFi 6 AX3000 PCIe WiFi Card (Archer TX3000E), Up to
-          2400Mbps, Bluetooth 5.2, 802.11AX Dual Band Wireless Adapter with
-          MU-MIMO,OFDMA,Ultra-Low Latency, Supports Windows 11, 10 (64bit) only</p>
-        <p>60</p>
+        <h2>TP-Link WiFi</h2>
+        <p> 6 AX3000 PCIe WiFi Card (Archer TX3000E), Up to
+          2400Mbps, Bluetooth 5.2, <br> 802.11AX Dual Band Wireless Adapter with
+          MU-MIMO,OFDMA,Ultra-Low Latency, <br> Supports Windows 11, 10 (64bit)
+          only</p>
+        <p>120 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('TP-Link WiFi')">Buy it now</a>
         </div>
 
       </div>
-      <div class="product-box">
+      <div class="product-box-mreza">
         <img src="images/mrezna oprema/m10.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Cat 8 Ethernet Cable 15 FT, Snowkids Flat High Speed Ethernet Cable,
-          40Gbps,2000Mhz Braided Internet Cable, Gold Plated RJ45 Connector, LAN
-          Cable S/FTP Network Cable for Modem/Router/PS4/5/Gaming/PC</p>
-        <p>12</p>
+        <h2>Cat 8 Ethernet Cable 15 FT</h2>
+        <p>Snowkids Flat High Speed Ethernet Cable,
+          40Gbps,2000Mhz Braided Internet Cable, <br> Gold Plated RJ45
+          Connector, LAN
+          Cable S/FTP Network Cable for <br> Modem/Router/PS4/5/Gaming/PC</p>
+        <p>24 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Cat 8 Ethernet Cable 15 FT')">Buy it
+            now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-mreza">
         <img src="images/mrezna oprema/m11.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Cable Matters 10Gbps Snagless Cat 6 Ethernet Cable 25 ft (Cat 6
-          Cable, Cat6 Cable, Internet Cable, Network Cable) in Black</p>
-        <p>20</p>
+        <h2>Cable Matters</h2>
+        <p> 10Gbps Snagless Cat 6 Ethernet Cable 25 ft<br> (Cat 6
+          Cable, Cat6 Cable, Internet Cable, Network Cable) <br> in Black</p>
+        <p>40 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Cable Matters')">Buy it now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-mreza">
         <img src="images/mrezna oprema/m12.jpg"
           alt="">
-        <h2>Product 1</h2>
-        <p>MAXLIN CABLE Cat6 Ethernet Cable for Gaming 10ft Multicolored LAN
-          Network Patch Cord, High Speed Internet Cable, UTP, RJ45, 24AWG,
-          500MHz, Compatible with Router, Modem, Smart TV, PS5, Xbox, 3 Pack</p>
-        <p>1500$</p>
+        <h2>MAXLIN CABLE Cat6</h2>
+        <p> Ethernet Cable for Gaming 10ft Multicolored LAN
+          Network Patch Cord, <br>High Speed Internet Cable, UTP, RJ45, 24AWG,
+          500MHz, Compatible with Router, <br> Modem, Smart TV, PS5, Xbox, 3
+          Pack</p>
+        <p>120 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('MAXLIN CABLE Cat6')">Buy it now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-mreza">
         <img src="images/mrezna oprema/m13.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>TP-Link AC1200 WiFi Extender(RE315), Covers Up to 1500 Sq.ft and 25
-          Devices, Up to 1200Mbps Dual Band WiFi Booster Repeater,Access Point,
+        <h2>TP-Link AC1200</h2>
+        <p> WiFi Extender(RE315), Covers Up to 1500 Sq.ft and 25
+          Devices, Up to<br> 1200Mbps Dual Band WiFi Booster Repeater,Access
+          Point,
           Supports OneMesh</p>
-        <p>50</p>
+        <p>100 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('TP-Link AC1200')">Buy it now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-mreza">
         <img src="images/mrezna oprema/m14.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>WiFi Extender Internet Booster and Signal Amplifier up to 9882 sq.ft
-          - Long Range Coverage Wi-Fi Repeater for Home - with Ethernet Port &
+        <h2>WiFi Extender</h2>
+        <p> Internet Booster and Signal Amplifier up to 9882 sq.ft
+          - Long Range Coverage Wi-Fi <br> Repeater for Home - with Ethernet
+          Port &
           AP Mode, Support 40 Devices,1 Touch Easy Setup
         </p>
-        <p>60/p>
+        <p>120 KM/p>
 
           <div class="opcije">
-            <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it
+            <a href="#" onclick="buyProduct('WiFi Extender')">Buy it
               now</a>
           </div>
 
         </div>
 
-        <div class="product-box">
+        <div class="product-box-mreza">
           <img src="images/mrezna oprema/m15.jpg" alt="">
-          <h2>Product 1</h2>
-          <p>TP-Link AC1900 WiFi Extender (RE550), Covers Up to 2800 Sq.ft and
-            35 Devices, 1900Mbps Dual Band Wireless Repeater, Internet Booster,
+          <h2>TP-Link AC1900</h2>
+          <p> WiFi Extender (RE550), Covers Up to 2800 Sq.ft and
+            35 Devices, <br> 1900Mbps Dual Band Wireless Repeater, <br> Internet
+            Booster,
             Gigabit Ethernet Port</p>
-          <p>70</p>
+          <p>140 KM</p>
 
           <div class="opcije">
-            <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it
+            <a href="#" onclick="buyProduct('TP-Link AC1900')">Buy it
               now</a>
           </div>
 
         </div>
 
-        <div class="product-box">
+        <div class="product-box-mreza">
           <img src="images/mrezna oprema/m16.jpg" alt="">
-          <h2>Product 1</h2>
-          <p>Eightwood Dual WiFi Antenna with RP-SMA Male Connector, 2.4GHz 5GHz
-            Dual Band Antenna Magnetic Base for PCI-E WiFi Network Card USB WiFi
+          <h2>Eightwood </h2>
+          <p>Dual WiFi Antenna with RP-SMA Male Connector, 2.4GHz 5GHz
+            Dual Band <br>Antenna Magnetic Base for PCI-E WiFi Network Card USB
+            <br>
+            WiFi
             Adapter Wireless Router</p>
-          <p>15</p>
+          <p>30 KM</p>
 
           <div class="opcije">
-            <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it
+            <a href="#" onclick="buyProduct('Eightwood')">Buy it
               now</a>
           </div>
 
         </div>
 
-        <div class="product-box">
+        <div class="product-box-mreza">
           <img src="images/mrezna oprema/m17.jpg" alt="">
-          <h2>Product 1</h2>
-          <p>2 x 8dBi WiFi RP-SMA Male Antenna 2.4GHz 5.8GHz Dual Band +2 x 15CM
-            U.FL/IPEX to RP-SMA Female Pigtail Cable for Mini PCIe Card Wireless
-            Routers, PC Desktop, Repeater, FPV UAV Drone and PS4 Build</p>
-          <p>9</p>
+          <h2>2 x 8dBi WiFi RP-SMA </h2>
+          <p>Male Antenna 2.4GHz 5.8GHz Dual Band +2 x 15CM
+            U.FL/IPEX to RP-SMA <br>Female Pigtail Cable for Mini PCIe Card
+            Wireless
+            Routers, PC Desktop, Repeater, <br> FPV UAV Drone and PS4 Build</p>
+          <p>18 KM</p>
 
           <div class="opcije">
-            <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it
+            <a href="#" onclick="buyProduct('2 x 8dBi WiFi RP-SMA')">Buy it
               now</a>
           </div>
 
         </div>
 
-        <div class="product-box">
+        <div class="product-box-mreza">
           <img src="images/mrezna oprema/m18.jpg" alt="">
-          <h2>Product 1</h2>
-          <p>Superbat WiFi Antenna with RP-SMA Male Connector, 2.4GHz 5GHz
+          <h2>Superbat WiFi Antenna</h2>
+          <p> with RP-SMA Male Connector, 2.4GHz 5GHz <br>
             5.8GHz Dual Band Antenna for PCI-E WiFi Network Card USB Wireless
+            <br>
             Camera Router Hotspot etc. 2pcs</p>
-          <p>12</p>
+          <p>24 KM</p>
 
           <div class="opcije">
-            <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it
+            <a href="#" onclick="buyProduct('Superbat WiFi Antenna')">Buy it
               now</a>
           </div>
 
