--- a/msi-monitor.html
+++ b/msi-monitor.html
@@ -93,14 +93,14 @@
 
       <div class="product-box-monitor">
         <img src="images/msi monitor/msimonitor4.jpg" alt="">
-        <h2>MSI</h2>
+        <h2>MSI Full HD Rapid-IPS</h2>
         <p> Full HD Rapid-IPS 1ms 2560 x 1080 Ultra Wide 200Hz Refresh Rate
           <br>
           HDR Ready G-Sync Compatible 30” Gaming Monitor (Optix MAG301RF)</p>
         <p>460 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI')">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI Full HD Rapid-IPS')">Buy it now</a>
         </div>
 
       </div>
@@ -122,14 +122,14 @@
 
       <div class="product-box-monitor">
         <img src="images/msi monitor/msimonitor6.jpg" alt="">
-        <h2>MSI </h2>
+        <h2>MSI Full QHD</h2>
         <p>Full QHD Anti-Glare 1ms 2560 x 1440 175Hz Refresh Rate HDR Ready
           <br>
           USB/DP/HDMI 31.5” Monitor (Optix MPG321QRF-QD)</p>
         <p>1120 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI')">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI Full QHD')">Buy it now</a>
         </div>
 
       </div>
