--- a/napojna.html
+++ b/napojna.html
@@ -62,7 +62,7 @@
         <p>70 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Thermaltake Smart')">Buy it now</a>
         </div>
 
       </div>
@@ -77,7 +77,7 @@
 
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Thermaltake Toughpower')">Buy it now</a>
         </div>
 
       </div>
@@ -92,7 +92,7 @@
         <p>110 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Cooler Master MWE ')">Buy it now</a>
         </div>
 
       </div>
@@ -104,7 +104,7 @@
         <p>220 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Power Supply')">Buy it now</a>
         </div>
 
       </div>
@@ -117,7 +117,8 @@
         <p>280 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Corsair RMx Series 2021')">Buy it
+            now</a>
         </div>
 
       </div>
@@ -131,7 +132,7 @@
         <p>300 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('ASUS ROG Strix ')">Buy it now</a>
         </div>
 
       </div>
