--- a/nitendo.html
+++ b/nitendo.html
@@ -16,7 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles/style-product.css">
+    <link rel="stylesheet" href="styles/style-product-konzole.css">
     <script src="scripts/buy.js"></script>
   </head>
   <body>
@@ -46,116 +46,47 @@
 
 
 
-    <div class="product-container">
+    <div class="product-container-konzole">
 
-      <div class="product-box">
-        <img src="/images/ryzen pc/ryzen1.jpg" alt="">
-        <h2>Skytech Shadow Gaming Pc</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit
+      <div class="product-box-konzole">
+        <img src="/images/nitendo/n1.jpg" alt="">
+        <h2>Nintendo Switch</h2>
+        <p>™ with Neon Blue and Neon Red Joy‑Con™
         </p>
-        <p>1500$</p>
+        <p>600 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Nintendo Switch')">Buy it now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
-        <img src="/images/ryzen pc/ryzen2.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+      <div class="product-box-konzole">
+        <img src="/images/nitendo/n2.jpg" alt="">
+        <h2>Nintendo 64 System </h2>
+        <p> Video Game Console (Renewed)</p>
+        <p>320 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Nintendo 64 System')">Buy it now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
-        <img src="/images/ryzen pc/ryzen3.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
+      <div class="product-box-konzole">
+        <img src="/images/nitendo/n3.jpg" alt="">
+        <h2>Wii Console</h2>
+        <p> Bonus Wii Sports Resort & Wii MotionPlus Bundle
+          (Renewed)</p>
+        <p>550 KM </p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Wii Console')">Buy it now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
-        <img src="/images/ryzen pc/ryzen4.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
 
-        <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
-        </div>
-
-      </div>
-
-      <div class="product-box">
-        <img src="/images/ryzen pc/ryzen5.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
-
-        <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
-        </div>
-
-      </div>
-
-      <div class="product-box">
-        <img src="/images/ryzen pc/ryzen1.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Procesor: AMD Ryzen 5 7600x <br>
-          Maticna ploca: MSI MAG B650 Tomahawk WiFi <br>
-          Graficka kartica: Nvidia GeForce RTX 3060TI <br>
-          Ram: 32GB DDR4 RGB <br>
-          SSD: 1TB NVME <br>
-          Napajanje: 600W GOLD PSU <br>
-          Windows 11 Home 64-bit</p>
-        <p>1500$</p>
-
-        <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
-        </div>
-
-      </div>
 
 
     </div>
