--- a/procesor.html
+++ b/procesor.html
@@ -57,20 +57,21 @@
         <p>680 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('AMD Ryzen 9 5900X')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box-procesor">
         <img src="images/procesor/procesor2.jpg" alt="">
-        <h2>AMD Ryzen™ 7 5700X 8-Core</h2>
-        <p> <br> 16-Thread Unlocked <br> Desktop
+        <h2>AMD Ryzen™ 7 5700X </h2>
+        <p> 8-Core 16-Thread<br> Unlocked <br> Desktop
           Processor</p>
         <p>410 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('AMD Ryzen™ 7 5700X 8-Core')">Buy it
+            now</a>
         </div>
 
       </div>
@@ -85,7 +86,7 @@
         <p>380 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Intel® Core™ i5-11600KF')">Buy it now</a>
         </div>
 
       </div>
@@ -98,7 +99,7 @@
         <p>520 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Intel Core i7-12700KF')">Buy it now</a>
         </div>
 
       </div>
@@ -106,27 +107,27 @@
       <div class="product-box-procesor">
         <img src="images/procesor/procesor5.jpg" alt="">
         <h2>AMD Ryzen 5 3600 </h2>
-        <p> 6-Core, <br> 12-Thread Unlocked Desktop Processor
+        <p> 6-Core, 12-Thread <br>Unlocked Desktop Processor
           with <br> Wraith Stealth Cooler</p>
         <p>240 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('AMD Ryzen 5 3600')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box-procesor">
         <img src="images/procesor/procesor6.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Intel Core i9-11900K Desktop Processor 8 Cores<br>
+        <h2>Intel Core i9-11900K</h2>
+        <p> Desktop Processor 8 Cores<br>
           up to 5.3 GHz Unlocked<br>
           LGA1200 (Intel 500 Series & Select 400 Series Chipset) </p>
 
         <p>800 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Intel Core i9-11900K')">Buy it now</a>
         </div>
 
       </div>
