--- a/ps4.html
+++ b/ps4.html
@@ -16,7 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
       integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles/style-product.css">
+    <link rel="stylesheet" href="styles/style-product-konzole.css">
     <script src="scripts/buy.js"></script>
   </head>
   <body>
@@ -46,78 +46,79 @@
 
 
 
-    <div class="product-container">
+    <div class="product-container-konzole">
 
-      <div class="product-box">
+      <div class="product-box-konzole">
         <img src="images/ps4/ps41.jpg" alt="">
-        <h2>Skytech Shadow Gaming Pc</h2>
-        <p>Sony Playstation PS4 1TB Black Console
+        <h2>Sony Playstation PS4</h2>
+        <p> 1TB Black Console
         </p>
-        <p>300</p>
+        <p>600 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Sony Playstation PS4')">Buy it now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-konzole">
         <img src="images/ps4/ps42.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Sony PlayStation 4 Pro 1TB Console - Black (PS4 Pro)</p>
-        <p>360</p>
+        <h2>Sony PlayStation 4 Pro</h2>
+        <p> 1TB Console - Black (PS4 Pro)</p>
+        <p>720 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Sony PlayStation 4 Pro')">Buy it now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-konzole">
         <img src="images/ps4/ps43.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>PlayStation 4 Slim 1TB Console - Marvel's Spider-Man Bundle</p>
-        <p>450</p>
+        <h2>PlayStation 4 Slim</h2>
+        <p> 1TB Console - Marvel's Spider-Man Bundle</p>
+        <p>900 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('PlayStation 4 Slim')">Buy it now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-konzole">
         <img src="images/ps4/ps44.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>PlayStation 4 Slim 1TB Console (Renewed)</p>
-        <p>340</p>
+        <h2>PlayStation 4 Slim 1TB </h2>
+        <p> Console (Renewed)</p>
+        <p>720 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('PlayStation 4 Slim 1TB')">Buy it now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-konzole">
         <img src="images/ps4/ps45.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>PlayStation 4 500GB Console - Uncharted 4 Limited Edition Bundle
+        <h2>PlayStation 4 500GB Console</h2>
+        <p> Uncharted 4 Limited Edition Bundle
           [Discontinued]</p>
-        <p>400</p>
+        <p>800 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('PlayStation 4 500GB Console')">Buy it
+            now</a>
         </div>
 
       </div>
 
-      <div class="product-box">
+      <div class="product-box-konzole">
         <img src="images/ps4/ps46.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>PlayStation 4 Slim 1TB Limited Edition Console - Days of Play Bundle</p>
-        <p>380</p>
+        <h2>PlayStation 4 Slim</h2>
+        <p> 1TB Limited Edition Console - Days of Play Bundle</p>
+        <p>800</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('PlayStation 4 Slim')">Buy it now</a>
         </div>
 
       </div>
