--- a/ps5.html
+++ b/ps5.html
@@ -50,25 +50,28 @@
 
       <div class="product-box">
         <img src="images/ps5/ps51.jpg" alt="">
-        <h2>Skytech Shadow Gaming Pc</h2>
-        <p>PlayStation 5 Console
+        <h2>PlayStation 5 Console</h2>
+        <p>Standard console
         </p>
-        <p>600</p>
+        <p>1200 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('PlayStation 5 Console')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box">
         <img src="images/ps5/ps52.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>PlayStation PS5 Console – God of War Ragnarök Bundle</p>
-        <p>680</p>
+        <h2>PlayStation PS5 Console </h2>
+        <p>God of War Ragnarök Bundle</p>
+        <p>1400 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#"
+            onclick="buyProduct('PlayStation PS5 God of WarRagnarök Bundle')">
+            Buy it now</a>
+
         </div>
 
       </div>
