--- a/ram memorija.html
+++ b/ram memorija.html
@@ -58,7 +58,8 @@
         <p>220 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Corsair Vengeance RGB Pro')">Buy it
+            now</a>
         </div>
 
       </div>
@@ -72,7 +73,8 @@
         <p>210 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Corsair Vengeance RGB Pro SL')">Buy
+            it now</a>
         </div>
 
       </div>
@@ -86,7 +88,8 @@
         <p>210 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('G.Skill Trident Z RGB Series ')">Buy
+            it now</a>
         </div>
 
       </div>
@@ -100,7 +103,8 @@
         <p>229</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Corsair Vengeance RGB Pro')">Buy it
+            now</a>
         </div>
 
       </div>
@@ -115,7 +119,8 @@
         <p>120 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Timetec Pinnacle Konduit RGB')">Buy
+            it now</a>
         </div>
 
       </div>
@@ -129,7 +134,8 @@
         <p>180 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('G.Skill Ripjaws V Series')">Buy it
+            now</a>
         </div>
 
       </div>
