--- a/samsung-monitor.html
+++ b/samsung-monitor.html
@@ -51,7 +51,7 @@
 
       <div class="product-box-monitor">
         <img src="images/samsung monitor/samsungmonitor1.jpg" alt="">
-        <h2>SAMSUNG </h2>
+        <h2>SAMSUNG LC24F396FHNXZA </h2>
         <p>23.5” CF396 Curved Computer Monitor, <br>
           AMD FreeSync for Advanced Gaming, 4ms Response Time, <br>
           Wide Viewing Angle, Ultra Slim Design, LC24F396FHNXZA, Black
@@ -59,28 +59,30 @@
         <p>320 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#"
+            onclick="buyProduct('SAMSUNG LC24F396FHNXZA')">Buy it
+            now</a>
         </div>
 
       </div>
 
       <div class="product-box-monitor">
         <img src="images/samsung monitor/samsungmonitor2.jpg" alt="">
-        <h2>SAMSUNG </h2>
+        <h2>SAMSUNG LS34J550WQNXZA </h2>
         <p>34-Inch SJ55W Ultrawide Gaming Monitor (LS34J550WQNXZA) <br>
           75Hz Refresh, WQHD Computer Monitor, 3440 x 1440p Resolution, 4ms <br>
           Response, FreeSync, Split Screen, HDMI, Black</p>
         <p>560 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('SAMSUNG LS34J550WQNXZA')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box-monitor">
         <img src="images/samsung monitor/samsungmonitor3.jpg" alt="">
-        <h2>SAMSUNG</h2>
+        <h2>SAMSUNG S27R650FDN</h2>
         <p> S27R650FDN, SR650 Series 27 inch IPS 1080p 75Hz Computer <br>
           Monitor for Business with VGA, HDMI, DisplayPort, and USB Hub, 3-Year
           <br>
@@ -88,14 +90,14 @@
         <p>370 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('SAMSUNG S27R650FDN')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box-monitor">
         <img src="images/samsung monitor/samsungmonitor4.jpg" alt="">
-        <h2>SAMSUNG</h2>
+        <h2>SAMSUNG Odyssey Neo G7</h2>
         <p> 32" Odyssey Neo G7 4K UHD 165Hz 1ms G-Sync 1000R Curved <br>
           Gaming Monitor, Quantum HDR2000, AMD FreeSync Premium Pro, Ultrawide
           <br>
@@ -103,14 +105,14 @@
         <p>2370 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('SAMSUNG Odyssey Neo G7')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box-monitor">
         <img src="images/samsung monitor/samsungmonitor5.jpg" alt="">
-        <h2>SAMSUNG</h2>
+        <h2>SAMSUNG Odyssey G32A</h2>
         <p> 27" Odyssey G32A FHD 1ms 165Hz Gaming Monitor with Eye Saver
           <br>
           Mode, Free-Sync Premium, Height Adjustable Screen for Gamer Comfort,
@@ -119,14 +121,14 @@
         <p>500 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('SAMSUNG Odyssey G32A ')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box-monitor">
         <img src="images/samsung monitor/samsungmonitor6.jpg" alt="">
-        <h2>SAMSUNG</h2>
+        <h2>SAMSUNG Odyssey G55A</h2>
         <p> 32" Odyssey G55A QHD 165Hz 1ms <br> FreeSync Curved Gaming
           Monitor
           <br>
@@ -134,7 +136,7 @@
         <p>680 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('SAMSUNG Odyssey G55A')">Buy it now</a>
         </div>
 
       </div>
