--- a/ssd.html
+++ b/ssd.html
@@ -58,20 +58,20 @@
         <p>200 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('SAMSUNG 870 EVO')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box-ssd">
         <img src="images/ssd (2)/ssd2.jpg" alt="">
-        <h2>Kingston</h2>
-        <p> 480GB A400 SATA 3 2.5" <br> Internal SSD SA400S37/480G <br> - HDD
+        <h2>Kingston 480GB</h2>
+        <p> A400 SATA 3 2.5" <br> Internal SSD SA400S37/480G <br> - HDD
           Replacement for Increase Performance</p>
         <p>54 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Kingston 480GB ')">Buy it now</a>
         </div>
 
       </div>
@@ -86,7 +86,7 @@
         <p>380 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('SAMSUNG 970 EVO Plus')">Buy it now</a>
         </div>
 
       </div>
@@ -101,7 +101,7 @@
         <p>260 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('SAMSUNG 980 PRO')">Buy it now</a>
         </div>
 
       </div>
@@ -116,7 +116,7 @@
         <p>280 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('SAMSUNG 870 QVO')">Buy it now</a>
         </div>
 
       </div>
@@ -131,7 +131,7 @@
         <p>80 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Western Digital')">Buy it now</a>
         </div>
 
       </div>
