--- a/tastatura.html
+++ b/tastatura.html
@@ -58,7 +58,7 @@
         <p>88 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('SteelSeries Apex 3')">Buy it now</a>
         </div>
 
       </div>
@@ -74,20 +74,21 @@
         <p>250 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Razer Huntsman V2 TKL')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box-tastatura ">
         <img src="images/tastatura/key3.jpg" alt="">
-        <h2>EVGA Z15 RGB Gaming Keyboard,</h2>
+        <h2>EVGA Z15 RGB Gaming Keyboard</h2>
         <p> RGB Backlit LED, Hotswappable <br>
           Mechanical Kailh Speed Silver Switches <br> (Linear), 821-W1-15US-KR</p>
         <p>200 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('EVGA Z15 RGB Gaming Keyboard')">Buy
+            it now</a>
         </div>
 
       </div>
@@ -100,7 +101,7 @@
         <p>110 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('RK ROYAL KLUDGE RK61')">Buy it now</a>
         </div>
 
       </div>
@@ -115,7 +116,7 @@
         <p>160 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('HK Gaming GK61')">Buy it now</a>
         </div>
 
       </div>
@@ -130,7 +131,7 @@
         <p>90 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Redragon K585 DITI')">Buy it now</a>
         </div>
 
       </div>
