--- a/web kamera.html
+++ b/web kamera.html
@@ -50,57 +50,63 @@
 
       <div class="product-box">
         <img src="images/web kamera/web1.jpg" alt="">
-        <h2>Skytech Shadow Gaming Pc</h2>
-        <p>Logitech C920x HD Pro Webcam, Full HD 1080p/30fps Video Calling,
-          Clear Stereo Audio, HD Light Correction, Works with Skype, Zoom,
-          FaceTime, Hangouts, PC/Mac/Laptop/Macbook/Tablet - Black
+        <h2>Logitech C920x </h2>
+        <p>HD Pro Webcam, Full HD 1080p/30fps Video Calling, <br>
+          Clear Stereo Audio, HD Light Correction, <br>Works with Skype, Zoom,
+          FaceTime, Hangouts, <br> PC/Mac/Laptop/Macbook/Tablet - Black
         </p>
-        <p>70</p>
+        <p>140 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Logitech C920x')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box">
         <img src="images/web kamera/web2.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>NexiGo N60 1080P Web Camera, HD Webcam with Microphone, Software
-          Control & Privacy Cover, USB Computer Camera, 110-degree FOV, Plug and
-          Play, for Zoom/Skype/Teams, Conferencing and Video Calling</p>
-        <p>50</p>
+        <h2>NexiGo N60</h2>
+        <p> 1080P Web Camera, HD Webcam with Microphone, <br>Software
+          Control & Privacy Cover, USB Computer<br Camera,> 110-degree FOV, Plug
+          and
+
+          Play, for Zoom/Skype/Teams, <br> Conferencing and Video Calling</p>
+        <p>100 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('NexiGo N60')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box">
         <img src="/images/web kamera/web3.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>NexiGo Zoom Certified, N970P 4K Webcam, Onboard Flash Memory,
-          Al-Powered Auto-Framing, Adjutable Field of View, Sony Sensor, Dual AI
-          Noise-Cancelling Mics, Works with Teams/Zoom/Webex/Google</p>
-        <p>190</p>
+        <h2>NexiGo Zoom</h2>
+        <p> Certified, N970P 4K Webcam, Onboard Flash Memory, <br>
+          Al-Powered Auto-Framing, Adjutable Field of View, <br> Sony Sensor,
+          Dual AI
+
+          Noise-Cancelling Mics,<br> Works with Teams/Zoom/Webex/Google</p>
+        <p>390 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('NexiGo Zoom')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box">
         <img src="images/web kamera/web4.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>DEPSTECH Webcam with Microphone, 1080P HD Webcam with Auto Light
-          Correction for Desktop/Laptop, Streaming Computer USB Web Camera for
-          Video Conferencing, Teaching, Streaming, and Gaming-D04/p>
-          <p>35</p>
+        <h2>DEPSTECH Webcam</h2>
+        <p> with Microphone, 1080P HD Webcam with Auto Light <br>
+          Correction for Desktop/Laptop, Streaming Computer <br> USB Web Camera
+          for
+
+          Video Conferencing, Teaching, <br>Streaming, and Gaming-D04
+          <p>70 KM</p>
 
           <div class="opcije">
-            <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it
+            <a href="#" onclick="buyProduct('DEPSTECH Webcam')">Buy it
               now</a>
           </div>
 
@@ -108,14 +114,17 @@
 
         <div class="product-box">
           <img src="images/web kamera/web5.jpg" alt="">
-          <h2>Product 1</h2>
-          <p>Elgato Facecam - 1080p60 True Full HD Webcam for Live Streaming,
-            Gaming, Video Calls, Sony Sensor, Advanced Light Correction, DSLR
-            Style Control, works with OBS, Zoom, Teams, and more, for PC/Mac</p>
-          <p>166</p>
+          <h2>Elgato Facecam </h2>
+          <p> 1080p60 True Full HD Webcam for Live Streaming, <br>
+            Gaming, Video Calls, Sony Sensor, Advanced Light <br>Correction,
+            DSLR
+
+            Style Control, works with OBS, <br> Zoom, Teams, and more, for
+            PC/Mac</p>
+          <p>340 KM</p>
 
           <div class="opcije">
-            <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it
+            <a href="#" onclick="buyProduct('Elgato Facecam')">Buy it
               now</a>
           </div>
 
@@ -123,14 +132,15 @@
 
         <div class="product-box">
           <img src="images/web kamera/web6.jpg" alt="">
-          <h2>Product 1</h2>
-          <p>Logitech Brio 4K Webcam, Ultra 4K HD Video Calling, Noise-Canceling
-            mic, HD Auto Light Correction, Wide Field of View, Works with
-            Microsoft Teams, Zoom, Google Voice, PC/Mac/Laptop/Macbook/Tablet</p>
-          <p>199</p>
+          <h2>Logitech Brio </h2>
+          <p>4K Webcam, Ultra 4K HD Video Calling, Noise-<br>Canceling
+            mic, HD Auto Light Correction, Wide<br> Field of View, Works with
+            Microsoft Teams, Zoom, <br>Google Voice,
+            PC/Mac/Laptop/Macbook/Tablet</p>
+          <p>200 KM</p>
 
           <div class="opcije">
-            <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it
+            <a href="#" onclick="buyProduct('Logitech Brio ')">Buy it
               now</a>
           </div>
 
