--- a/xbox.html
+++ b/xbox.html
@@ -50,50 +50,50 @@
 
       <div class="product-box">
         <img src="images/xbox/x1.jpg" alt="">
-        <h2>Skytech Shadow Gaming Pc</h2>
-        <p>Xbox Series S – Gilded Hunter Bundle
+        <h2>Xbox Series S</h2>
+        <p> 512 GB with Wireless Controller <br> Gilded Hunter Bundle
         </p>
-        <p>350</p>
+        <p>700 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Xbox Series S')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box">
         <img src="images/xbox/x2.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Xbox Series S – Fortnite & Rocket League Bundle</p>
-        <p>336</p>
+        <h2>Xbox Series S</h2>
+        <p> 512 GB with Wireless Controller <br> Fortnite & Rocket League Bundle</p>
+        <p>720 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Xbox Series S')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box">
         <img src="images/xbox/x3.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Microsoft Xbox One X 1TB Console with Wireless Controller: Xbox One X
-          Enhanced, HDR, Native 4K, Ultra HD (2017 Model) (Renewed)</p>
-        <p>409</p>
+        <h2>Microsoft Xbox One X</h2>
+        <p> 1TB Console Wireless Controller: Xbox One X
+          Enhanced,<br> HDR, Native 4K, Ultra HD (2017 Model) (Renewed) </p>
+        <p>800 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Microsoft Xbox One X')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box">
         <img src="/images/xbox/x4.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Microsoft Xbox 360 20GB Console (Renewed)</p>
-        <p>205</p>
+        <h2>Microsoft Xbox 360</h2>
+        <p> 20GB Console <br> (Renewed)</p>
+        <p>410 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Microsoft Xbox 360')">Buy it now</a>
         </div>
 
       </div>
