--- a/zvucnik.html
+++ b/zvucnik.html
@@ -50,85 +50,98 @@
 
       <div class="product-box">
         <img src="images/zvucnik/z1.jpg" alt="">
-        <h2>Skytech Shadow Gaming Pc</h2>
-        <p>Redragon GS500 Stentor PC Gaming Speaker, 2.0 Channel Stereo Desktop
-          Computer Speaker with Red Backlight, Quality Bass and Crystal Clear
+        <h2>Redragon GS500 </h2>
+        <p>Stentor PC Gaming Speaker, 2.0<br> Channel Stereo
+          Desktop
+
+          Computer Speaker with <br>Red Backlight, Quality Bass and Crystal
+          Clear
+          <br>
           Sound, USB Powered with a 3.5mm Connector
         </p>
-        <p>30</p>
+        <p>60 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Redragon GS500')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box">
         <img src="images/zvucnik/z2.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Computer Speakers, Dynamic RGB PC Speakers, USB Powered HiFi Stereo
-          Computer Speakers for Desktop with Bass Diaphragms & 4 Speaker Units,
-          Bluetooth 5.0 or 3.5mm AUX-in for Laptop Tablet Monitor Phone</p>
-        <p>60</p>
+        <h2>Computer Speakers</h2>
+        <p> Dynamic RGB PC Speakers, USB Powered HiFi Stereo <br>
+          Computer Speakers for Desktop with Bass Diaphragms<br> & 4 Speaker
+          Units,
+          Bluetooth 5.0 or 3.5mm AUX-in for<br> Laptop Tablet Monitor Phone</p>
+        <p>120 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Computer Speakers')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box">
         <img src="images/zvucnik/z3.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>INSMART Computer Speakers, 2.0 Stereo Volume Control with RGB Light
-          USB Powered Gaming Speakers for PC/Laptops/Desktops/Phone/Ipad/Game
+        <h2>INSMART Computer Speakers</h2>
+        <p> 2.0 Stereo Volume Control with RGB Light <br>
+          USB Powered Gaming Speakers <br> for
+          PC/Laptops/Desktops/Phone/Ipad/Game
+          <br>
           Machine (5Wx2)</p>
-        <p>35</p>
+        <p>70 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('INSMART Computer Speakers')">Buy it
+            now</a>
         </div>
 
       </div>
 
       <div class="product-box">
         <img src="images/zvucnik/z4.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Edifier R1280T Powered Bookshelf Speakers - 2.0 Stereo Active Near
-          Field Monitors - Studio Monitor Speaker - Wooden Enclosure - 42 Watts
+        <h2>Edifier R1280T</h2>
+        <p> Powered Bookshelf Speakers - 2.0 Stereo Active Near <br>
+          Field Monitors - Studio Monitor Speaker - <br> Wooden Enclosure - 42
+          Watts
+          <br>
           RMS</p>
-        <p>119</p>
+        <p>240 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Edifier R1280T')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box">
         <img src="images/zvucnik/z5.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Cyber Acoustics CA-3908 2.1 Stereo Speaker System with 6.5" Subwoofer
-          and Control Pod - Computer and Home Audio Set with 3.5mm AUX Input for
+        <h2>Cyber Acoustics CA-3908 </h2>
+        <p>2.1 Stereo Speaker System with 6.5" Subwoofer <br>
+          and Control Pod - Computer and Home Audio <br> Set with 3.5mm AUX
+          Input for
+          <br>
           Cellphone, Tablet, Desktop, Laptop, or Gaming</p>
-        <p>100</p>
+        <p>200 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Cyber Acoustics CA-3908 ')">Buy it
+            now</a>
         </div>
 
       </div>
 
       <div class="product-box">
         <img src="images/zvucnik/z6.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Audioengine A5+ Plus Powered Speaker | Desktop Monitor Speakers
-          Computer Sound System | 150W Premium Powered Bookshelf Stereo
-          Speakers, AUX Audio, RCA Inputs/Outputs, Remote Control (White)</p>
-        <p>400</p>
+        <h2>Audioengine</h2>
+        <p> A5+ Plus Powered Speaker | Desktop Monitor Speakers<br>
+          Computer Sound System | 150W Premium Powered<br> Bookshelf Stereo
+          Speakers, AUX Audio, <br> RCA Inputs/Outputs, Remote Control (White)</p>
+        <p>800 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Audioengine')">Buy it now</a>
         </div>
 
       </div>
