--- a/asus-laptop.html
+++ b/asus-laptop.html
@@ -58,7 +58,8 @@
         <p>2560 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('ASUS TUF Dash 15 (2022) Gaming Laptop<')">Buy
+            it now</a>
         </div>
 
       </div>
@@ -73,7 +74,10 @@
         <p>3800 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#"
+            onclick="buyProduct('ASUS ROG Strix Scar 15 (2022)Gaming')">Buy it
+            now</a>
+
         </div>
 
       </div>
@@ -88,7 +92,10 @@
         <p>4600 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#"
+            onclick="buyProduct('ASUS ROG Strix Scar 15 (2021) Gaming')">Buy it
+            now</a>
+
         </div>
 
       </div>
@@ -103,7 +110,9 @@
         <p>3850 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#"
+            onclick="buyProduct('ASUS ROG Strix Scar 15 Gaming Laptop')">Buy it
+            now</a>
         </div>
 
       </div>
@@ -118,7 +127,8 @@
         <p>1800 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('ASUS TUF Gaming F17 Gaming Laptop')">Buy
+            it now</a>
         </div>
 
       </div>
@@ -133,7 +143,8 @@
         <p>2300 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('ASUS TUF A15 Gaming Laptop')">Buy it
+            now</a>
         </div>
 
       </div>
