--- a/dell-laptop.html
+++ b/dell-laptop.html
@@ -60,7 +60,7 @@
         <p>1920 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Dell G15')">Buy it now</a>
         </div>
 
       </div>
@@ -76,7 +76,8 @@
         <p>2900 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('2021 Dell G5 15 Gaming Laptop')">Buy
+            it now</a>
         </div>
 
       </div>
@@ -91,7 +92,7 @@
         <p>4200 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Dell 2022 G15 ')">Buy it now</a>
         </div>
 
       </div>
@@ -107,7 +108,10 @@
         <p> 3400 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#"
+            onclick="buyProduct('Dell Alienware M15 R5 Gaming Laptop')">Buy it
+            now</a>
+
         </div>
 
       </div>
@@ -122,7 +126,7 @@
         <p>1960 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Dell G15 ')">Buy it now</a>
         </div>
 
       </div>
@@ -137,7 +141,10 @@
         <p>1600 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#"
+            onclick="buyProduct('Dell Inspiron Laptop (2022 Latest Model)')">Buy
+            it now</a>
+
         </div>
 
       </div>
