--- a/graficka kartica.html
+++ b/graficka kartica.html
@@ -57,7 +57,8 @@
         <p>440 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('ZOTAC Gaming GeForce GTX 1660')">Buy
+            it now</a>
         </div>
 
       </div>
@@ -71,7 +72,8 @@
         <p>700 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('ZOTAC Gaming GeForce RTX 3060 ')">Buy
+            it now</a>
         </div>
 
       </div>
@@ -85,7 +87,8 @@
         <p>1900 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('ZOTAC Gaming GeForce RTX™ 3070 Ti')">Buy
+            it now</a>
         </div>
 
       </div>
@@ -99,7 +102,8 @@
         <p>620 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('XFX Speedster Radeon RX 6650XT')">Buy
+            it now</a>
         </div>
 
       </div>
@@ -113,7 +117,8 @@
         <p>615 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI Gaming AMD Radeon RX 6600')">Buy
+            it now</a>
         </div>
 
       </div>
@@ -126,7 +131,9 @@
         <p>1900 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#"
+            onclick="buyProduct('XFX Speedster AMD Radeon RX 7900XT')">Buy it
+            now</a>
         </div>
 
       </div>
