--- a/lenovo-laptop.html
+++ b/lenovo-laptop.html
@@ -60,7 +60,8 @@
         <p>1800 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Lenovo IdeaPad Gaming 3 - 2022')">Buy
+            it now</a>
         </div>
 
       </div>
@@ -75,14 +76,15 @@
         <p>2400 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Lenovo Legion 5 Gaming Laptop')">Buy
+            it now</a>
         </div>
 
       </div>
 
       <div class="product-box-laptop">
         <img src="images/lenovo laptop/lenovolaptop3.jpg" alt="">
-        <h2>Lenovo - Legion 5 - Gaming Laptop -</h2>
+        <h2>Lenovo - Legion 5 - Gaming Laptop </h2>
         <p> AMD Ryzen 5 5600H - 8GB DDR4 RAM <br>
           - 512GB NVMe TLC SSD - <br> NVIDIA GeForce RTX 3060 Graphics - 15.6"
           FHD
@@ -90,7 +92,8 @@
         <p>2400 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#"
+            onclick="buyProduct('Lenovo - Legion 5 - Gaming Laptop')">Buy it now</a>
         </div>
 
       </div>
@@ -105,7 +108,7 @@
         <p>3160 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Lenovo Legion 5')">Buy it now</a>
         </div>
 
       </div>
@@ -119,7 +122,7 @@
         <p>1650 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Lenovo IdeaPad 3i')">Buy it now</a>
         </div>
 
       </div>
@@ -135,7 +138,8 @@
         <p>2400 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Dell Inspiron Plus Laptop')">Buy it
+            now</a>
         </div>
 
       </div>
