--- a/maticna ploca.html
+++ b/maticna ploca.html
@@ -60,7 +60,7 @@
         <p>360 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('ASUS ROG Strix B550-F')">Buy it now</a>
         </div>
 
       </div>
@@ -77,7 +77,8 @@
         <p>420 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('ASUS AM4 TUF Gaming X570-Plus')">Buy
+            it now</a>
         </div>
 
       </div>
@@ -91,7 +92,7 @@
         <p>240 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI B550M PRO-VDH')">Buy it now</a>
         </div>
 
       </div>
@@ -107,7 +108,8 @@
         <p>720 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('ASUS ROG Strix Z690-E Gaming')">Buy
+            it now</a>
         </div>
 
       </div>
@@ -123,7 +125,7 @@
         <p>300 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MPG Z490 Gaming')">Buy it now</a>
         </div>
 
       </div>
@@ -137,7 +139,7 @@
         <p>520 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('MSI MAG Z690 Tomahawk')">Buy it now</a>
         </div>
 
       </div>
