--- a/slusalice.html
+++ b/slusalice.html
@@ -50,87 +50,93 @@
 
       <div class="product-box">
         <img src="images/slusalice/sluse1.jpg" alt="">
-        <h2>Skytech Shadow Gaming Pc</h2>
-        <p>Logitech G PRO X Gaming Headset - Blue VO!CE, Detachable Microphone,
+        <h2>Logitech G PRO Gaming Headset</h2>
+        <p> Blue VO!CE, Detachable Microphone,
           <br>
-          Comfortable Memory Foam Ear Pads, DTS Headphone 7.1 and 50 mm PRO G
+          Comfortable Memory Foam Ear Pads, <br> DTS Headphone 7.1 and 50 mm PRO
+          G
           <br>
           Drivers, Official League of Legends Edition
         </p>
-        <p>130 </p>
+        <p>260 KM </p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Logitech G PRO Gaming Headset')">Buy
+            it now</a>
         </div>
 
       </div>
 
       <div class="product-box">
         <img src="images/slusalice/sluse2.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>HyperX Cloud Core – Wireless Gaming Headset for PC, DTS Headphone:X
-          Spatial Audio, Memory Foam Ear Pads, Durable Aluminum Frame,
-          Detachable Noise Cancelling Microphone</p>
-        <p>100</p>
+        <h2>HyperX Cloud Core </h2>
+        <p> Wireless Gaming Headset for PC, DTS Headphone:X <br>
+          Spatial Audio, Memory Foam Ear Pads, <br> Durable Aluminum Frame,
+          Detachable <br>Noise Cancelling Microphone</p>
+        <p>200 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('HyperX Cloud Core')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box">
         <img src="images/slusalice/sluse3.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>JBL Quantum 400 - Wired Over-Ear Gaming Headphones with USB and
-          Game-Chat Balance Dial - Black</p>
-        <p>100</p>
+        <h2>JBL Quantum 400 </h2>
+        <p>Wired Over-Ear <br> Gaming Headphones with USB and <br>
+          Game-Chat Balance Dial <br> Black</p>
+        <p>200 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('JBL Quantum 400 ')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box">
         <img src="images/slusalice/sluse4.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Razer BlackShark V2 X Gaming Headset: 7.1 Surround Sound - 50mm
-          Drivers - Memory Foam Cushion - for PC, PS4, PS5, Switch, Xbox One,
-          Xbox Series X|S, Mobile - 3.5mm Audio Jack - Classic Black</p>
-        <p>60</p>
+        <h2>Razer BlackShark V2 </h2>
+        <p>X Gaming Headset: 7.1 Surround Sound - 50mm <br>
+          Drivers - Memory Foam Cushion for PC, PS4, PS5<br> Switch, Xbox One,
+          Xbox Series X|S, Mobile -<br> 3.5mm Audio Jack - Classic Black</p>
+        <p>120 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Razer BlackShark V2')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box">
         <img src="images/slusalice/sluse5.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>Logitech G435 LIGHTSPEED and Bluetooth Wireless Gaming Headset -
-          Lightweight over-ear headphones, built-in mics, 18h battery,
-          compatible with Dolby Atmos, PC, PS4, PS5, Nintendo Switch, Mobile -
+        <h2>Logitech G435</h2>
+        <p> LIGHTSPEED and Bluetooth Wireless Gaming<br> Headset
+          Lightweight over-ear headphones, built-in mics,<br> 18h battery,
+          compatible with Dolby Atmos, PC, PS4,<br> PS5, Nintendo Switch,
+          Mobile
+          <br>
           Black</p>
-        <p>70</p>
+        <p>140 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('Logitech G435')">Buy it now</a>
         </div>
 
       </div>
 
       <div class="product-box">
         <img src="images/slusalice/sluse6.jpg" alt="">
-        <h2>Product 1</h2>
-        <p>SteelSeries Arctis Nova 1P Multi-System Gaming Headset — Hi-Fi
-          Drivers — 360° Spatial Audio — Comfort Design — Durable — Lightweight
-          — Noise-Cancelling Mic — PS5/PS4, PC, Xbox, Switch - White</p>
-        <p>50</p>
+        <h2>SteelSeries Arctis Nova</h2>
+        <p> 1P Multi-System Gaming Headset — Hi-Fi
+          Drivers <br> — 360° Spatial Audio <br> — Comfort Design — Durable <br>
+          —
+          Lightweight
+          — Noise-Cancelling Mic — <br> PS5/PS4, PC, Xbox, Switch - White</p>
+        <p>100 KM</p>
 
         <div class="opcije">
-          <a href="#" onclick="buyProduct('MSI MPG ARTYMIS 273CQR')">Buy it now</a>
+          <a href="#" onclick="buyProduct('SteelSeries Arctis Nova')">Buy it now</a>
         </div>
 
       </div>
